# quickai

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
src/: export.rs  main.rs  mcp.rs  model.rs  pricing.rs  proxy.rs  query.rs  report.rs
src/cli/: mod.rs
src/index/: mod.rs  schema.rs
src/parse/: linkage.rs  mod.rs  record.rs
src/source/: claude.rs  mod.rs  opencode.rs  proxy.rs
