[package]
name = "quickai"
version = "0.2.0"
edition = "2021"
description = "Профайлер работы Claude Code: токены, деньги, агенты, бенчмарки"

[[bin]]
name = "quickai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
