[package]
name = "quickai"
version = "0.3.0"
edition = "2021"
description = "Профайлер работы Claude Code: токены, деньги, агенты, бенчмарки"

[[bin]]
name = "quickai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }

# Live-capture прокси (команда `proxy`) — прозрачный reverse-proxy к LLM API.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "json"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"

[profile.release]
lto = true
codegen-units = 1
